improve requisition index page fix error with z-index

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,6 +4,7 @@
   color: white;
   position: fixed;
   width: 100%;
+  z-index: 100;
 }
 
 .header .content {
@@ -22,4 +23,3 @@
 .kotage-logo {
   width: 140px;
 }
-
